removed flash after jump-to-file (resolved issue #56) show resetFilter-button only for text

--- a/styles/go-outline.less
+++ b/styles/go-outline.less
@@ -5,14 +5,6 @@
 @import "ui-variables";
 @import "syntax-variables";
 
-atom-text-editor::shadow {
-  .line.go-outline-highlight-line{
-    background-color: @background-color-selected;
-  }
-}
-
-
-
 .go-outline-tree-resizer {
   position: relative;
   height: 100%;
